src/parser/grammar.output
Terminals which are not used

   LEFT_ASSIGN
   LOW


State 49 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 97 conflicts: 2 shift/reduce
State 141 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 158 conflicts: 2 shift/reduce
State 159 conflicts: 2 shift/reduce
State 169 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: END_OF_INPUT
    2     | '\n'
    3     | COMMENT '\n'
    4     | statement '\n'
    5     | declaration '\n'
    6     | expression '\n'
    7     | '?' identifier '\n'
    8     | '?' functionCall '\n'
    9     | error

   10 expression: constant
   11           | '(' expression ')'
   12           | '-' expression
   13           | '+' expression
   14           | '!' expression
   15           | expression ':' expression
   16           | expression '+' expression
   17           | expression '-' expression
   18           | expression '*' expression
   19           | expression '/' expression
   20           | expression '^' expression
   21           | expression LT expression
   22           | expression LE expression
   23           | expression EQ expression
   24           | expression NE expression
   25           | expression GE expression
   26           | expression GT expression
   27           | expression AND expression
   28           | expression OR expression
   29           | expression AND2 expression
   30           | expression OR2 expression
   31           | arrowAssign
   32           | equationAssign
   33           | tildeAssign
   34           | functionCall
   35           | variable

   36 arrowAssign: variable ARROW_ASSIGN expression

   37 tildeAssign: variable TILDE_ASSIGN functionCall

   38 equationAssign: variable EQUATION_ASSIGN expression

   39 variable: identifier optElement
   40         | variable '.' identifier optElement

   41 optElement: '[' expression ']' optElement
   42           | /* empty */

   43 functionCall: identifier '(' argumentList ')'
   44             | variable '.' identifier '(' argumentList ')'

   45 argumentList: argument optArguments
   46             | /* empty */

   47 optArguments: ',' argument optArguments
   48             | /* empty */

   49 argument: expression
   50         | identifier EQUAL expression

   51 functionDef: FUNCTION identifier '(' formalList ')' stmts
   52            | FUNCTION identifier identifier '(' formalList ')' stmts

   53 formalList: formal optFormals
   54           | /* empty */

   55 optFormals: ',' formal optFormals
   56           | /* empty */

   57 formal: identifier
   58       | identifier EQUAL expression
   59       | identifier identifier
   60       | identifier identifier EQUAL expression

   61 stmts: '{' stmtList '}'
   62      | stmtList

   63 stmtList: statement optStatements
   64         | /* empty */

   65 optStatements: ';' statement optStatements
   66              | '\n' statement optStatements
   67              | /* empty */

   68 statement: ifStatement
   69          | forStatement
   70          | whileStatement
   71          | nextStatement
   72          | breakStatement
   73          | returnStatement
   74          | expression '\n'
   75          | expression ';'
   76          | ';'

   77 declaration: classDef
   78            | functionDef

   79 memberDefs: memberDef optMemberDefs
   80           | /* empty */

   81 optMemberDefs: ';' memberDef optMemberDefs
   82              | '\n' memberDef optMemberDefs
   83              | /* empty */

   84 memberDef: formal
   85          | functionDef

   86 classDef: CLASS identifier ':' identifier '{' memberDefs '}'

   87 ifStatement: IF cond stmts
   88            | IF cond stmts ELSE stmts

   89 cond: '(' expression ')'

   90 forStatement: FOR forCond stmts

   91 forCond: '(' identifier IN expression ')'

   92 whileStatement: WHILE cond stmts

   93 nextStatement: NEXT

   94 breakStatement: BREAK

   95 returnStatement: RETURN
   96                | RETURN expression

   97 identifier: NAME

   98 constant: FALSE
   99         | TRUE
  100         | RBNULL
  101         | INT
  102         | STRING
  103         | REAL


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 4 5 6 7 8 66 74 82
'!' (33) 14
'(' (40) 11 43 44 51 52 89 91
')' (41) 11 43 44 51 52 89 91
'*' (42) 18
'+' (43) 13 16
',' (44) 47 55
'-' (45) 12 17
'.' (46) 40 44
'/' (47) 19
':' (58) 15 86
';' (59) 65 75 76 81
'?' (63) 7 8
'[' (91) 41
']' (93) 41
'^' (94) 20
'{' (123) 61 86
'}' (125) 61 86
error (256) 9
REAL (258) 103
INT (259) 101
NAME (260) 97
STRING (261) 102
RBNULL (262) 100
FALSE (263) 98
TRUE (264) 99
COMMENT (265) 3
FUNCTION (266) 51 52
CLASS (267) 86
FOR (268) 90
IN (269) 91
IF (270) 87 88
ELSE (271) 88
WHILE (272) 92
NEXT (273) 93
BREAK (274) 94
RETURN (275) 95 96
LEFT_ASSIGN (276)
TILDE_ASSIGN (277) 37
EQUATION_ASSIGN (278) 38
EQUAL (279) 50 58 60
AND (280) 27
OR (281) 28
AND2 (282) 29
OR2 (283) 30
GT (284) 26
GE (285) 25
LT (286) 21
LE (287) 22
EQ (288) 23
NE (289) 24
END_OF_INPUT (290) 1
LOW (291)
ARROW_ASSIGN (292) 36
UNOT (293)
UPLUS (294)
UMINUS (295)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
prog (60)
    on left: 1 2 3 4 5 6 7 8 9, on right: 0
expression (61)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35, on right: 6 11 12 13 14 15 16 17 18 19
    20 21 22 23 24 25 26 27 28 29 30 36 38 41 49 50 58 60 74 75 89
    91 96
arrowAssign (62)
    on left: 36, on right: 31
tildeAssign (63)
    on left: 37, on right: 33
equationAssign (64)
    on left: 38, on right: 32
variable (65)
    on left: 39 40, on right: 35 36 37 38 40 44
optElement (66)
    on left: 41 42, on right: 39 40 41
functionCall (67)
    on left: 43 44, on right: 8 34 37
argumentList (68)
    on left: 45 46, on right: 43 44
optArguments (69)
    on left: 47 48, on right: 45 47
argument (70)
    on left: 49 50, on right: 45 47
functionDef (71)
    on left: 51 52, on right: 78 85
formalList (72)
    on left: 53 54, on right: 51 52
optFormals (73)
    on left: 55 56, on right: 53 55
formal (74)
    on left: 57 58 59 60, on right: 53 55 84
stmts (75)
    on left: 61 62, on right: 51 52 87 88 90 92
stmtList (76)
    on left: 63 64, on right: 61 62
optStatements (77)
    on left: 65 66 67, on right: 63 65 66
statement (78)
    on left: 68 69 70 71 72 73 74 75 76, on right: 4 63 65 66
declaration (79)
    on left: 77 78, on right: 5
memberDefs (80)
    on left: 79 80, on right: 86
optMemberDefs (81)
    on left: 81 82 83, on right: 79 81 82
memberDef (82)
    on left: 84 85, on right: 79 81 82
classDef (83)
    on left: 86, on right: 77
ifStatement (84)
    on left: 87 88, on right: 68
cond (85)
    on left: 89, on right: 87 88 92
forStatement (86)
    on left: 90, on right: 69
forCond (87)
    on left: 91, on right: 90
whileStatement (88)
    on left: 92, on right: 70
nextStatement (89)
    on left: 93, on right: 71
breakStatement (90)
    on left: 94, on right: 72
returnStatement (91)
    on left: 95 96, on right: 73
identifier (92)
    on left: 97, on right: 7 39 40 43 44 50 51 52 57 58 59 60 86 91
constant (93)
    on left: 98 99 100 101 102 103, on right: 10


state 0

    0 $accept: . prog $end

    error         shift, and go to state 1
    REAL          shift, and go to state 2
    INT           shift, and go to state 3
    NAME          shift, and go to state 4
    STRING        shift, and go to state 5
    RBNULL        shift, and go to state 6
    FALSE         shift, and go to state 7
    TRUE          shift, and go to state 8
    COMMENT       shift, and go to state 9
    FUNCTION      shift, and go to state 10
    CLASS         shift, and go to state 11
    FOR           shift, and go to state 12
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    NEXT          shift, and go to state 15
    BREAK         shift, and go to state 16
    RETURN        shift, and go to state 17
    END_OF_INPUT  shift, and go to state 18
    '?'           shift, and go to state 19
    '+'           shift, and go to state 20
    '-'           shift, and go to state 21
    '('           shift, and go to state 22
    '\n'          shift, and go to state 23
    '!'           shift, and go to state 24
    ';'           shift, and go to state 25

    prog             go to state 26
    expression       go to state 27
    arrowAssign      go to state 28
    tildeAssign      go to state 29
    equationAssign   go to state 30
    variable         go to state 31
    functionCall     go to state 32
    functionDef      go to state 33
    statement        go to state 34
    declaration      go to state 35
    classDef         go to state 36
    ifStatement      go to state 37
    forStatement     go to state 38
    whileStatement   go to state 39
    nextStatement    go to state 40
    breakStatement   go to state 41
    returnStatement  go to state 42
    identifier       go to state 43
    constant         go to state 44


state 1

    9 prog: error .

    $default  reduce using rule 9 (prog)


state 2

  103 constant: REAL .

    $default  reduce using rule 103 (constant)


state 3

  101 constant: INT .

    $default  reduce using rule 101 (constant)


state 4

   97 identifier: NAME .

    $default  reduce using rule 97 (identifier)


state 5

  102 constant: STRING .

    $default  reduce using rule 102 (constant)


state 6

  100 constant: RBNULL .

    $default  reduce using rule 100 (constant)


state 7

   98 constant: FALSE .

    $default  reduce using rule 98 (constant)


state 8

   99 constant: TRUE .

    $default  reduce using rule 99 (constant)


state 9

    3 prog: COMMENT . '\n'

    '\n'  shift, and go to state 45


state 10

   51 functionDef: FUNCTION . identifier '(' formalList ')' stmts
   52            | FUNCTION . identifier identifier '(' formalList ')' stmts

    NAME  shift, and go to state 4

    identifier  go to state 46


state 11

   86 classDef: CLASS . identifier ':' identifier '{' memberDefs '}'

    NAME  shift, and go to state 4

    identifier  go to state 47


state 12

   90 forStatement: FOR . forCond stmts

    '('  shift, and go to state 48

    forCond  go to state 49


state 13

   87 ifStatement: IF . cond stmts
   88            | IF . cond stmts ELSE stmts

    '('  shift, and go to state 50

    cond  go to state 51


state 14

   92 whileStatement: WHILE . cond stmts

    '('  shift, and go to state 50

    cond  go to state 52


state 15

   93 nextStatement: NEXT .

    $default  reduce using rule 93 (nextStatement)


state 16

   94 breakStatement: BREAK .

    $default  reduce using rule 94 (breakStatement)


state 17

   95 returnStatement: RETURN .
   96                | RETURN . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    $default  reduce using rule 95 (returnStatement)

    expression      go to state 53
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 18

    1 prog: END_OF_INPUT .

    $default  reduce using rule 1 (prog)


state 19

    7 prog: '?' . identifier '\n'
    8     | '?' . functionCall '\n'

    NAME  shift, and go to state 4

    variable      go to state 54
    functionCall  go to state 55
    identifier    go to state 56


state 20

   13 expression: '+' . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 57
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 21

   12 expression: '-' . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 58
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 22

   11 expression: '(' . expression ')'

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 59
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 23

    2 prog: '\n' .

    $default  reduce using rule 2 (prog)


state 24

   14 expression: '!' . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 60
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 25

   76 statement: ';' .

    $default  reduce using rule 76 (statement)


state 26

    0 $accept: prog . $end

    $end  shift, and go to state 61


state 27

    6 prog: expression . '\n'
   15 expression: expression . ':' expression
   16           | expression . '+' expression
   17           | expression . '-' expression
   18           | expression . '*' expression
   19           | expression . '/' expression
   20           | expression . '^' expression
   21           | expression . LT expression
   22           | expression . LE expression
   23           | expression . EQ expression
   24           | expression . NE expression
   25           | expression . GE expression
   26           | expression . GT expression
   27           | expression . AND expression
   28           | expression . OR expression
   29           | expression . AND2 expression
   30           | expression . OR2 expression
   74 statement: expression . '\n'
   75          | expression . ';'

    AND   shift, and go to state 62
    OR    shift, and go to state 63
    AND2  shift, and go to state 64
    OR2   shift, and go to state 65
    GT    shift, and go to state 66
    GE    shift, and go to state 67
    LT    shift, and go to state 68
    LE    shift, and go to state 69
    EQ    shift, and go to state 70
    NE    shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    ':'   shift, and go to state 76
    '^'   shift, and go to state 77
    '\n'  shift, and go to state 78
    ';'   shift, and go to state 79


state 28

   31 expression: arrowAssign .

    $default  reduce using rule 31 (expression)


state 29

   33 expression: tildeAssign .

    $default  reduce using rule 33 (expression)


state 30

   32 expression: equationAssign .

    $default  reduce using rule 32 (expression)


state 31

   35 expression: variable .
   36 arrowAssign: variable . ARROW_ASSIGN expression
   37 tildeAssign: variable . TILDE_ASSIGN functionCall
   38 equationAssign: variable . EQUATION_ASSIGN expression
   40 variable: variable . '.' identifier optElement
   44 functionCall: variable . '.' identifier '(' argumentList ')'

    TILDE_ASSIGN     shift, and go to state 80
    EQUATION_ASSIGN  shift, and go to state 81
    ARROW_ASSIGN     shift, and go to state 82
    '.'              shift, and go to state 83

    $default  reduce using rule 35 (expression)


state 32

   34 expression: functionCall .

    $default  reduce using rule 34 (expression)


state 33

   78 declaration: functionDef .

    $default  reduce using rule 78 (declaration)


state 34

    4 prog: statement . '\n'

    '\n'  shift, and go to state 84


state 35

    5 prog: declaration . '\n'

    '\n'  shift, and go to state 85


state 36

   77 declaration: classDef .

    $default  reduce using rule 77 (declaration)


state 37

   68 statement: ifStatement .

    $default  reduce using rule 68 (statement)


state 38

   69 statement: forStatement .

    $default  reduce using rule 69 (statement)


state 39

   70 statement: whileStatement .

    $default  reduce using rule 70 (statement)


state 40

   71 statement: nextStatement .

    $default  reduce using rule 71 (statement)


state 41

   72 statement: breakStatement .

    $default  reduce using rule 72 (statement)


state 42

   73 statement: returnStatement .

    $default  reduce using rule 73 (statement)


state 43

   39 variable: identifier . optElement
   43 functionCall: identifier . '(' argumentList ')'

    '('  shift, and go to state 86
    '['  shift, and go to state 87

    $default  reduce using rule 42 (optElement)

    optElement  go to state 88


state 44

   10 expression: constant .

    $default  reduce using rule 10 (expression)


state 45

    3 prog: COMMENT '\n' .

    $default  reduce using rule 3 (prog)


state 46

   51 functionDef: FUNCTION identifier . '(' formalList ')' stmts
   52            | FUNCTION identifier . identifier '(' formalList ')' stmts

    NAME  shift, and go to state 4
    '('   shift, and go to state 89

    identifier  go to state 90


state 47

   86 classDef: CLASS identifier . ':' identifier '{' memberDefs '}'

    ':'  shift, and go to state 91


state 48

   91 forCond: '(' . identifier IN expression ')'

    NAME  shift, and go to state 4

    identifier  go to state 92


state 49

   90 forStatement: FOR forCond . stmts

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    FOR     shift, and go to state 12
    IF      shift, and go to state 13
    WHILE   shift, and go to state 14
    NEXT    shift, and go to state 15
    BREAK   shift, and go to state 16
    RETURN  shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24
    '{'     shift, and go to state 93
    ';'     shift, and go to state 25

    ';'       [reduce using rule 64 (stmtList)]
    $default  reduce using rule 64 (stmtList)

    expression       go to state 94
    arrowAssign      go to state 28
    tildeAssign      go to state 29
    equationAssign   go to state 30
    variable         go to state 31
    functionCall     go to state 32
    stmts            go to state 95
    stmtList         go to state 96
    statement        go to state 97
    ifStatement      go to state 37
    forStatement     go to state 38
    whileStatement   go to state 39
    nextStatement    go to state 40
    breakStatement   go to state 41
    returnStatement  go to state 42
    identifier       go to state 43
    constant         go to state 44


state 50

   89 cond: '(' . expression ')'

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 98
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 51

   87 ifStatement: IF cond . stmts
   88            | IF cond . stmts ELSE stmts

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    FOR     shift, and go to state 12
    IF      shift, and go to state 13
    WHILE   shift, and go to state 14
    NEXT    shift, and go to state 15
    BREAK   shift, and go to state 16
    RETURN  shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24
    '{'     shift, and go to state 93
    ';'     shift, and go to state 25

    ';'       [reduce using rule 64 (stmtList)]
    $default  reduce using rule 64 (stmtList)

    expression       go to state 94
    arrowAssign      go to state 28
    tildeAssign      go to state 29
    equationAssign   go to state 30
    variable         go to state 31
    functionCall     go to state 32
    stmts            go to state 99
    stmtList         go to state 96
    statement        go to state 97
    ifStatement      go to state 37
    forStatement     go to state 38
    whileStatement   go to state 39
    nextStatement    go to state 40
    breakStatement   go to state 41
    returnStatement  go to state 42
    identifier       go to state 43
    constant         go to state 44


state 52

   92 whileStatement: WHILE cond . stmts

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    FOR     shift, and go to state 12
    IF      shift, and go to state 13
    WHILE   shift, and go to state 14
    NEXT    shift, and go to state 15
    BREAK   shift, and go to state 16
    RETURN  shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24
    '{'     shift, and go to state 93
    ';'     shift, and go to state 25

    ';'       [reduce using rule 64 (stmtList)]
    $default  reduce using rule 64 (stmtList)

    expression       go to state 94
    arrowAssign      go to state 28
    tildeAssign      go to state 29
    equationAssign   go to state 30
    variable         go to state 31
    functionCall     go to state 32
    stmts            go to state 100
    stmtList         go to state 96
    statement        go to state 97
    ifStatement      go to state 37
    forStatement     go to state 38
    whileStatement   go to state 39
    nextStatement    go to state 40
    breakStatement   go to state 41
    returnStatement  go to state 42
    identifier       go to state 43
    constant         go to state 44


state 53

   15 expression: expression . ':' expression
   16           | expression . '+' expression
   17           | expression . '-' expression
   18           | expression . '*' expression
   19           | expression . '/' expression
   20           | expression . '^' expression
   21           | expression . LT expression
   22           | expression . LE expression
   23           | expression . EQ expression
   24           | expression . NE expression
   25           | expression . GE expression
   26           | expression . GT expression
   27           | expression . AND expression
   28           | expression . OR expression
   29           | expression . AND2 expression
   30           | expression . OR2 expression
   96 returnStatement: RETURN expression .

    AND   shift, and go to state 62
    OR    shift, and go to state 63
    AND2  shift, and go to state 64
    OR2   shift, and go to state 65
    GT    shift, and go to state 66
    GE    shift, and go to state 67
    LT    shift, and go to state 68
    LE    shift, and go to state 69
    EQ    shift, and go to state 70
    NE    shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    ':'   shift, and go to state 76
    '^'   shift, and go to state 77

    $default  reduce using rule 96 (returnStatement)


state 54

   40 variable: variable . '.' identifier optElement
   44 functionCall: variable . '.' identifier '(' argumentList ')'

    '.'  shift, and go to state 83


state 55

    8 prog: '?' functionCall . '\n'

    '\n'  shift, and go to state 101


state 56

    7 prog: '?' identifier . '\n'
   39 variable: identifier . optElement
   43 functionCall: identifier . '(' argumentList ')'

    '('   shift, and go to state 86
    '['   shift, and go to state 87
    '\n'  shift, and go to state 102

    $default  reduce using rule 42 (optElement)

    optElement  go to state 88


state 57

   13 expression: '+' expression .
   15           | expression . ':' expression
   16           | expression . '+' expression
   17           | expression . '-' expression
   18           | expression . '*' expression
   19           | expression . '/' expression
   20           | expression . '^' expression
   21           | expression . LT expression
   22           | expression . LE expression
   23           | expression . EQ expression
   24           | expression . NE expression
   25           | expression . GE expression
   26           | expression . GT expression
   27           | expression . AND expression
   28           | expression . OR expression
   29           | expression . AND2 expression
   30           | expression . OR2 expression

    '^'  shift, and go to state 77

    $default  reduce using rule 13 (expression)


state 58

   12 expression: '-' expression .
   15           | expression . ':' expression
   16           | expression . '+' expression
   17           | expression . '-' expression
   18           | expression . '*' expression
   19           | expression . '/' expression
   20           | expression . '^' expression
   21           | expression . LT expression
   22           | expression . LE expression
   23           | expression . EQ expression
   24           | expression . NE expression
   25           | expression . GE expression
   26           | expression . GT expression
   27           | expression . AND expression
   28           | expression . OR expression
   29           | expression . AND2 expression
   30           | expression . OR2 expression

    '^'  shift, and go to state 77

    $default  reduce using rule 12 (expression)


state 59

   11 expression: '(' expression . ')'
   15           | expression . ':' expression
   16           | expression . '+' expression
   17           | expression . '-' expression
   18           | expression . '*' expression
   19           | expression . '/' expression
   20           | expression . '^' expression
   21           | expression . LT expression
   22           | expression . LE expression
   23           | expression . EQ expression
   24           | expression . NE expression
   25           | expression . GE expression
   26           | expression . GT expression
   27           | expression . AND expression
   28           | expression . OR expression
   29           | expression . AND2 expression
   30           | expression . OR2 expression

    AND   shift, and go to state 62
    OR    shift, and go to state 63
    AND2  shift, and go to state 64
    OR2   shift, and go to state 65
    GT    shift, and go to state 66
    GE    shift, and go to state 67
    LT    shift, and go to state 68
    LE    shift, and go to state 69
    EQ    shift, and go to state 70
    NE    shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    ':'   shift, and go to state 76
    '^'   shift, and go to state 77
    ')'   shift, and go to state 103


state 60

   14 expression: '!' expression .
   15           | expression . ':' expression
   16           | expression . '+' expression
   17           | expression . '-' expression
   18           | expression . '*' expression
   19           | expression . '/' expression
   20           | expression . '^' expression
   21           | expression . LT expression
   22           | expression . LE expression
   23           | expression . EQ expression
   24           | expression . NE expression
   25           | expression . GE expression
   26           | expression . GT expression
   27           | expression . AND expression
   28           | expression . OR expression
   29           | expression . AND2 expression
   30           | expression . OR2 expression

    GT   shift, and go to state 66
    GE   shift, and go to state 67
    LT   shift, and go to state 68
    LE   shift, and go to state 69
    EQ   shift, and go to state 70
    NE   shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    ':'  shift, and go to state 76
    '^'  shift, and go to state 77

    $default  reduce using rule 14 (expression)


state 61

    0 $accept: prog $end .

    $default  accept


state 62

   27 expression: expression AND . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 104
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 63

   28 expression: expression OR . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 105
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 64

   29 expression: expression AND2 . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 106
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 65

   30 expression: expression OR2 . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 107
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 66

   26 expression: expression GT . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 108
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 67

   25 expression: expression GE . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 109
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 68

   21 expression: expression LT . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 110
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 69

   22 expression: expression LE . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 111
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 70

   23 expression: expression EQ . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24

    expression      go to state 112
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    equationAssign  go to state 30
    variable        go to state 31
    functionCall    go to state 32
    identifier      go to state 43
    constant        go to state 44


state 71

   24 expression: expression NE . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '!'     shift, and go to state 24
